package adapter.service;

import product.component.MessageComponent;

public interface ExternalMessageService {
    void sendMessage(MessageComponent message);
}
